test/valid/test3.3.puzzle
# This puzzle is unsolvable


		3###33
8 4 0# 

5 2   6   #


3   7    1
