test/invalid/test3.3.puzzle
# This puzzle is unsolvable
3
8 4 0
5 0 6
3 7 1
